adding multiple predictions for all models

--- a/PredictRegres.ipynb
+++ b/PredictRegres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_path = \"mobile phone price prediction.csv\"\n",
     "random_state = 29\n",
     "K_cv = [8]\n",
-    "polynom_degree = [1,2,3]\n",
+    "polynom_degree = [2,3]\n",
     "alpha_values = [0.01,0.05,0.1,0.2,0.5,1,2,5,10,11,12,13,14,15,18,20]\n",
     "max_iterations = [10000, 20000, 30000, 40000, 50000]\n",
     "tolerance = [1, 1e-1, 1e-2, 1e-3]\n",
@@ -40,15 +40,19 @@
     "polynomial_feature_scaler = PolynomialFeatures()\n",
     "\n",
     "models = {\n",
-    "    \"Linear\":LinearRegression(), # Linear Regression\n",
+    "    \"Simple\":LinearRegression(), # Linear Regression\n",
+    "    \"Poly\":LinearRegression(), # Poly Regression\n",
     "    \"Lasso\":Lasso(), # L1 Regression\n",
     "    \"Ridge\":Ridge() # L2 Regression\n",
     "}\n",
     "\n",
     "param_grids = {\n",
-    "    \"Linear\": {\n",
-    "        \"poly__degree\": polynom_degree,  # Adjust the degrees of PolynomialFeatures\n",
-    "        \"model__fit_intercept\": [True, False],  # Example of a parameter for LinearRegression\n",
+    "    \"Simple\": {\n",
+    "        \"model__fit_intercept\": [True, False],\n",
+    "    },\n",
+    "    \"Poly\": {\n",
+    "        \"poly__degree\": polynom_degree,\n",
+    "        \"model__fit_intercept\": [True, False], \n",
     "    },\n",
     "    \"Lasso\": {\n",
     "        \"model__alpha\": alpha_values,\n",
@@ -66,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,11 +295,17 @@
     "        A DataFrame with results for each model and hyperparameter combination.\n",
     "    \"\"\"\n",
     "    results = []\n",
+    "    scoring = {\n",
+    "        'r2': 'r2',\n",
+    "        'neg_mean_squared_error': 'neg_mean_squared_error',\n",
+    "        'neg_mean_absolute_error': 'neg_mean_absolute_error'\n",
+    "    }\n",
+    "    \n",
     "    for name, model in models.items():\n",
     "        for k_split in K_cv:\n",
     "            param_grid = param_grids[name]\n",
     "            # Create the preprocessing pipeline to include features scaling\n",
-    "            if 'Linear' in name:\n",
+    "            if 'Poly' in name:\n",
     "                pipeline = Pipeline([\n",
     "                (\"poly\", polynomial_feature_scaler),\n",
     "                (\"scaler\", feature_scaler),\n",
@@ -311,7 +321,7 @@
     "            grid_search = GridSearchCV(\n",
     "                estimator=pipeline,\n",
     "                param_grid=param_grid,\n",
-    "                scoring=\"r2\",  # Multiple scoring metrics\n",
+    "                scoring=scoring,  # Multiple scoring metrics\n",
     "                refit=\"r2\",  # Choose the best model based on R2\n",
     "                cv=KFold(n_splits=k_split, shuffle=True, random_state=random_state),  # Cross-validation splits\n",
     "                n_jobs=-1  # Parallelize for faster execution\n",
@@ -327,19 +337,19 @@
     "                \"model\": grid_search.best_estimator_,\n",
     "                \"K_cv\": k_split,\n",
     "                \"best_params\": grid_search.best_params_,\n",
-    "                \"best_r2\": grid_search.best_score_,  # Negate since MSE is negative\n",
-    "                \"train_time\": end_train_time - begin_train_time\n",
+    "                \"train_time\": end_train_time - begin_train_time,\n",
+    "                \"mean_test_r2\": grid_search.cv_results_['mean_test_r2'][ grid_search.best_index_],\n",
+    "                \"mean_test_mse\": -grid_search.cv_results_['mean_test_neg_mean_squared_error'][ grid_search.best_index_],  \n",
+    "                \"mean_test_mae\": -grid_search.cv_results_['mean_test_neg_mean_absolute_error'][ grid_search.best_index_] \n",
     "            })\n",
     "            \n",
-    "    #fitted_scaler = grid_search.best_estimator_.named_steps['scaler']\n",
-    "    # Convert to DataFrame\n",
     "    results_df = pd.DataFrame(results)\n",
     "    return results_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +399,7 @@
     "    \"\"\"\n",
     "    if not want_save:\n",
     "        return\n",
-    "    model_filename = f\"{model['model_name']}_model_k{model['K_cv']}_r2_{model['best_r2']:.3f}.joblib\"\n",
+    "    model_filename = f\"{model['model_name']}_model_k{model['K_cv']}_r2_{model['mean_test_r2']:.3f}.joblib\"\n",
     "    joblib.dump(model['model'], model_filename)\n",
     "    print(f\"Model saved as: {model_filename}\")"
    ]
@@ -403,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -753,17 +763,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = dataset_cleaned_encoded.drop(target_column,axis=1)\n",
-    "y = dataset_cleaned_encoded.loc[:,target_column]"
+    "dataset_cleaned_encoded.to_csv('dataset_cleaned_encoded.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_cleaned_encoded = pd.read_csv('dataset_cleaned_encoded.csv')\n",
+    "X = dataset_cleaned_encoded.drop(target_column,axis=1)\n",
+    "y = dataset_cleaned_encoded[target_column]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,41 +793,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model_name: Linear\n",
-      "model: Pipeline(steps=[('poly', PolynomialFeatures(degree=1)),\n",
-      "                ('scaler', StandardScaler()), ('model', LinearRegression())])\n",
-      "K_cv: 8\n",
-      "best_params: {'model__fit_intercept': True, 'poly__degree': 1}\n",
-      "best_r2: -6917928733488902569984.0000\n",
-      "train_time: 20.8247\n",
-      "\n",
-      "\n",
-      "model_name: Lasso\n",
-      "model: Pipeline(steps=[('scaler', StandardScaler()),\n",
-      "                ('model', Lasso(alpha=15, max_iter=10000, tol=0.1))])\n",
-      "K_cv: 8\n",
-      "best_params: {'model__alpha': 15, 'model__max_iter': 10000, 'model__tol': 0.1}\n",
-      "best_r2: 0.7445\n",
-      "train_time: 5.5027\n",
-      "\n",
-      "\n",
-      "model_name: Ridge\n",
-      "model: Pipeline(steps=[('scaler', StandardScaler()),\n",
-      "                ('model',\n",
-      "                 Ridge(alpha=14, max_iter=30000, solver='saga', tol=0.01))])\n",
-      "K_cv: 8\n",
-      "best_params: {'model__alpha': 14, 'model__max_iter': 30000, 'model__solver': 'saga', 'model__tol': 0.01}\n",
-      "best_r2: 0.7458\n",
-      "train_time: 6.0571\n",
-      "\n",
-      "\n"
+      "Model saved as: Ridge_model_k8_r2_0.746.joblib\n"
      ]
     }
    ],
@@ -820,30 +813,15 @@
     "            print(f\"{column}: {row[column]:.4f}\")\n",
     "        else:\n",
     "            print(f\"{column}: {row[column]}\")\n",
-    "    print(\"\\n\")"
+    "    print(\"\\n\")\n",
+    "    \n",
+    "best_model = results_df.loc[results_df['mean_test_r2'].idxmax()]\n",
+    "#save_model(best_model,'yes')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model saved as: Ridge_model_k8_r2_0.746.joblib\n"
-     ]
-    }
-   ],
-   "source": [
-    "best_model = results_df.loc[results_df['best_r2'].idxmax()]\n",
-    "save_model(best_model,'yes')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,14 +843,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Acno_Sama\\Desktop\\university\\Master\\Complexity\\project_tp\\Ridge_model_k8_r2_0.746.joblib\n"
+      "c:\\Users\\Acno_Sama\\Desktop\\university\\master\\comp\\project_tp\\Ridge_model_k8_r2_0.746.joblib\n"
      ]
     }
    ],
@@ -885,26 +863,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The predicted price of the phone is: 16482.16\n",
-      "Difference in price: 2982\n",
-      "The predicted price of the phone is: 11288.26\n",
-      "Difference in price: 288\n",
-      "The predicted price of the phone is: 9710.56\n",
-      "Difference in price: -4790\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_model = joblib.load(model_path)\n",
     "\n",
-    "predict_price(input_data, real_prices, best_model, X, lower_bound, upper_bound)"
+    "for model_name,best_model in zip(results_df['model_name'], results_df['model']):\n",
+    "    print(f\"\\n{model_name} model predictions :\")\n",
+    "    predict_price(input_data, real_prices, best_model, X, lower_bound, upper_bound)"
    ]
   },
   {
