--- a/PredictRegres.ipynb
+++ b/PredictRegres.ipynb
@@ -339,7 +339,7 @@
     "            y_mean = np.mean(y)\n",
     "            mse_calculated = np.mean((y - y_pred) ** 2) # mse = 1/n * sum( (y_real - y_predicted)**2 )\n",
     "            # note : the mse will be so big cause of the y values here ( prices ) are big numbers.\n",
-    "            mape_calculated = np.mean(np.abs((y - y_pred) / y))\n",
+    "            mape_calculated = np.mean(np.abs((y - y_pred) / y)) # mape = 1/n * sum( abs(y_real - y_predicted) )\n",
     "            \n",
     "            sce = np.sum((y_pred - y_mean) ** 2)\n",
     "            sst = np.sum((y - y_mean) ** 2)\n",
